<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/Image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:contentDescription="@string/img"
            android:src="@color/darkgray"
            android:layout_margin="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/Image"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/nama"
                style="@style/text"
                android:text="@string/nm"/>
            <TextView
                android:id="@+id/sekolah"
                style="@style/text2"
                android:text="@string/sek"/>
            <TextView
                android:id="@+id/hobi"
                android:paddingBottom="@dimen/_10sdp"
                style="@style/text2"
                android:text="@string/ho"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>